--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "@mui/styled-engine-sc": "^6.1.5",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "localforage": "^1.10.0",
     "match-sorter": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "sort-by": "^1.2.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
